fix(bainistigh): make sure the static MapKit image isn't stretched

--- a/apps/bainistigh/assets/css/live/journal_live/_entries_component.scss
+++ b/apps/bainistigh/assets/css/live/journal_live/_entries_component.scss
@@ -171,9 +171,17 @@
     @include text.style($color: main, $size: 18px, $weight: 500);
     padding: 0 12px 12px 12px;
 
-    img {
+    picture {
       @include border.all(secondary);
       border-radius: 4px;
+      height: 216px;
+      overflow: hidden;
+    }
+
+    img {
+      display: block;
+      object-fit: cover;
+      object-position: bottom left;
     }
   }
 }
